<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.edu.utng.unidad2.ReservacionesActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="@dimen/size_30"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="@dimen/size_16"
        android:hint="@string/nombre_completo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel"
        android:textSize="@dimen/size_30"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_16"
        android:inputType="phone"
        android:hint="@string/numtel"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/n_de_personas"
        android:textSize="@dimen/size_30"/>

    <Spinner
        android:id="@+id/spn_num"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_53"></Spinner>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textSize="@dimen/size_30"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/dd_mm_aaaa"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservar"
        android:layout_gravity="center"/>

</LinearLayout>
