<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.edu.utng.unidad2.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/bar">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ubicacion"
        android:layout_marginTop="@dimen/size_20"
        android:text="@string/ubicacion"
        android:layout_gravity="center"
        android:onClick="click1"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_notificaciones"
        android:layout_marginTop="@dimen/size_20"
        android:text="@string/notificaciones"
        android:layout_gravity="center"
        android:onClick="click2"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_reservacion"
        android:layout_marginTop="@dimen/size_20"
        android:text="@string/reservacion"
        android:layout_gravity="center"
        android:onClick="click3"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_eventos"
        android:layout_marginTop="@dimen/size_20"
        android:text="@string/eventos"
        android:layout_gravity="center"
        android:onClick="click4"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_bebidas"
        android:layout_marginTop="@dimen/size_20"
        android:text="@string/bebidas"
        android:layout_gravity="center"
        android:onClick="click5"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_admin"
        android:layout_marginTop="@dimen/size_20"
        android:text="@string/admin"
        android:layout_gravity="center"
        android:onClick="click6"
        />

</LinearLayout>
