<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bar2"
    tools:context="mx.edu.utng.unidad2.AdminActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_cero"
        android:layout_weight="2">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/administrador"
        android:textSize="@dimen/size_admin"
        android:textColor="@color/color_admin"
        android:gravity="center"/>
    </RelativeLayout>

    <GridLayout
        android:columnCount="3"
        android:rowCount="3"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_cero"
        android:columnOrderPreserved="false"
        android:padding="@dimen/size_14">

        --row1--
        --columna 1--
        <android.support.v7.widget.CardView
            android:layout_width="@dimen/size_cero"
            android:layout_height="@dimen/size_cero"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/size_16"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_marginRight="@dimen/size_16"
            app:cardElevation="8dp"
            app:cardCornerRadius="@dimen/size_10">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/size_16"
                android:layout_gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bebida"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/size_10"
                    android:textStyle="bold"
                    android:text="@string/bebidas"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        --columna 2--
        <android.support.v7.widget.CardView
            android:layout_width="@dimen/size_cero"
            android:layout_height="@dimen/size_cero"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/size_16"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_marginRight="@dimen/size_16"
            app:cardElevation="@dimen/size_8"
            app:cardCornerRadius="@dimen/size_10">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/size_16"
                android:layout_gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/reservar"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/size_7"
                    android:textStyle="bold"
                    android:text="@string/reservaciones"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        --row2--
        --columna 1--
        <android.support.v7.widget.CardView
            android:layout_width="@dimen/size_cero"
            android:layout_height="@dimen/size_cero"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/size_16"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_marginRight="@dimen/size_16"
            app:cardElevation="@dimen/size_8"
            app:cardCornerRadius="@dimen/size_10">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/size_16"
                android:layout_gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/evento"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/size_10"
                    android:textStyle="bold"
                    android:text="@string/eventos"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        --columna 2--
        <android.support.v7.widget.CardView
            android:layout_width="@dimen/size_cero"
            android:layout_height="@dimen/size_cero"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/size_16"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_marginRight="@dimen/size_16"
            app:cardElevation="@dimen/size_8"
            app:cardCornerRadius="@dimen/size_10">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/size_16"
                android:layout_gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/horario"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/size_10"
                    android:textStyle="bold"
                    android:text="@string/horarios"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        --row3--
        --columna 1--
        <android.support.v7.widget.CardView
            android:layout_width="@dimen/size_cero"
            android:layout_height="@dimen/size_cero"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/size_16"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_marginRight="@dimen/size_16"
            app:cardElevation="@dimen/size_8"
            app:cardCornerRadius="@dimen/size_10">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/size_16"
                android:layout_gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/promocion"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/size_8"
                    android:textStyle="bold"
                    android:text="Promociones"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        --columna 2--
        <android.support.v7.widget.CardView
            android:layout_width="@dimen/size_cero"
            android:layout_height="@dimen/size_cero"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/size_16"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_marginRight="@dimen/size_16"
            app:cardElevation="@dimen/size_8"
            app:cardCornerRadius="@dimen/size_10">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/size_16"
                android:layout_gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/galeria"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/size_10"
                    android:textStyle="bold"
                    android:text="@string/galeria"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </GridLayout>

</LinearLayout>
